# codemate

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  dev_requirements.txt  index.html  mkdocs.yml  mypy.ini  pylintrc  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: test.yml
codemate/: __init__.py  block.py  exceptions.py  file.py  method.py  structure.py  syntax.py  utils.py  validator.py
docs/: index.md
docs/extra/: development.md
docs/tutorial/: block_component.md  class_component.md  exceptions.md  file_component.md  function_component.md  intro.md  method_component.md
extra/development/: index.html
scripts/: lint.sh  test.sh
search/: search_index.json
tests/: utils.py
tests/block/: test_add_doc.py  test_add_import.py  test_add_syntax.py  test_general.py  test_parse_block.py
tests/class_/: test_general.py
tests/examples/: __init__.py  block.py  class_.py  file.py  function.py  method.py
tests/file/: test_general.py
tests/function/: test_general.py
tutorial/block_component/: index.html
tutorial/class_component/: index.html
tutorial/exceptions/: index.html
tutorial/file_component/: index.html
tutorial/function_component/: index.html
tutorial/intro/: index.html
tutorial/method_component/: index.html
