[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "codemate"
author = "Dor Abu"
author-email = "dor.abu@cyberproof.com"
home-page = "https://github.com/Cyberproof/codemate"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==5.4.3",
    "pytest-cov ==2.10.0",
    "pytest-asyncio >=0.14.0,<0.15.0",
    "mypy ==0.812",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
    "isort >=5.0.6,<6.0.0",
    "requests >=2.24.0,<3.0.0",
    "httpx >=0.14.0,<0.15.0",
    "email_validator >=1.1.1,<2.0.0",
    "sqlalchemy >=1.3.18,<1.4.0",
    "peewee >=3.13.3,<4.0.0",
    "databases[sqlite] >=0.3.2,<0.4.0",
    "orjson >=3.2.1,<4.0.0",
    "async_exit_stack >=1.0.1,<2.0.0",
    "async_generator >=1.10,<2.0.0",
    "python-multipart >=0.0.5,<0.0.6",
    "aiofiles >=0.5.0,<0.6.0",
    "flask >=1.1.2,<2.0.0"
]
doc = [
]
dev = [
    "mypy==0.782",
    "flake8>=3.9.2,<4.0.0",
    "pre-commit>=2.12.1,<3.0.0",
    "pylint>=2.8.2,<3.0.0",
]
all = [
    "black>=20.8b1,<21.0",
    "isort[requirements_deprecated_finder,pipfile_deprecated_finder]>=5.8.0,<6.0.0",
]
