[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "codemate"
author = "Dor Abu"
author-email = "dor.abu@cyberproof.com"
home-page = "https://github.com/Cyberproof/codemate"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description-file = "README.md"
requires-python = ">=3.6"
requires = [
    "black>=21.7b0,<22.0",
    "isort[requirements_deprecated_finder,pipfile_deprecated_finder]>=5.8.0,<6.0.0",
]
[tool.flit.metadata.requires-extra]
test = [
    "pytest==5.4.3",
    "pytest-cov==2.10.0",
    "mypy==0.782",
    "flake8>=3.9.2,<4.0.0",
    "pylint>=2.8.2,<3.0.0",
]
doc = [
    "mkdocstrings>=0.15.2,<1.0.0",
    "mkdocs-material>=7.2.5,<8.0.0",
    "mkdocs-markdownextradata-plugin>=0.2.4,<1.0.0",
]
dev = [
    "mypy==0.782",
    "flake8>=3.9.2,<4.0.0",
    "pre-commit>=2.12.1,<3.0.0",
    "pylint>=2.8.2,<3.0.0",
]
all = [
]

[tool.isort]
profile = "black"
